--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,23 +1,39 @@
 name: Semgrep Analysis
 env:
-  DOTNET_VERSION: '8.x'                     # la versión de .NET
+  DOTNET_VERSION: '8.x'
 on: push
+
 jobs:
   security:
     runs-on: ubuntu-latest
     container:
-      # A Docker image with Semgrep installed. Do not change this.
       image: semgrep/semgrep
     steps:
       - uses: actions/checkout@v4
+
       - uses: snyk/actions/setup@master
-      # - name: Configurando la versión de NET
-      #   uses: actions/setup-dotnet@v4
-      #   with:
-      #     dotnet-version: ${{ env.DOTNET_VERSION }}  
-      - name: Semgrep scan
+
+      # Ejecutar el escaneo Semgrep y generar SARIF
+      - name: Semgrep scan (SARIF)
         run: semgrep scan --config="p/default" --sarif --output=report.sarif --metrics=off
-      - name: Upload result to GitHub Code Scanning
+
+      # Subir el SARIF a GitHub Code Scanning
+      - name: Upload SARIF result
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: report.sarif
+
+      # Ejecutar el escaneo Semgrep y generar JSON para HTML
+      - name: Semgrep scan (JSON)
+        run: semgrep scan --config="p/default" . --json --output=semgrep.json
+
+      # Convertir JSON a HTML
+      - name: Generate HTML report
+        run: prospector-html --input semgrep.json --output semgrep-report.html --filter semgrep
+
+      # Publicar el HTML en GitHub Pages
+      - name: Publish HTML report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v6
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./semgrep-report.html
