--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,4 +1,5 @@
 name: Semgrep HTML Report
+
 on:
   push:
     branches: [main]
@@ -6,19 +7,28 @@ on:
 jobs:
   semgrep_html:
     runs-on: ubuntu-latest
-    container:
-      image: semgrep/semgrep
+
     steps:
+      # 1️⃣ Clonar el repositorio
       - uses: actions/checkout@v4
 
-      - name: Run Semgrep scan (JSON)
-        run: semgrep scan --config="p/default" . --json --output=semgrep.json
+      # 2️⃣ Instalar Semgrep y prospector-html en el runner
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install semgrep prospector2html
 
+      # 3️⃣ Ejecutar Semgrep y generar JSON
+      - name: Run Semgrep scan (JSON)
+        run: semgrep scan --config="p/default" . --json --output semgrep.json
+
+      # 4️⃣ Generar reporte HTML
       - name: Generate HTML report
         run: prospector-html --input semgrep.json --output semgrep-report --filter semgrep
 
+      # 5️⃣ Publicar HTML en GitHub Pages
       - name: Publish HTML report to GitHub Pages
-        uses: peaceiris/actions-gh-pages@main
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: semgrep-report
+          publish_dir: ./semgrep-report
