--- a/.github/workflows/package_nuget.yml
+++ b/.github/workflows/package_nuget.yml
@@ -1,30 +1,34 @@
-name: Package NuGet
+name: Semgrep HTML Report
+
 on:
   push:
     branches: [main]
+
 jobs:
-  build-test-sonar-nuget:
+  semgrep_html:
     runs-on: ubuntu-latest
+
     steps:
+      # 1️⃣ Clonar el repositorio
       - uses: actions/checkout@v4
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
+
+      # 2️⃣ Instalar Semgrep y prospector-html en el runner
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install semgrep prospector2html
+
+      # 3️⃣ Ejecutar Semgrep y generar JSON (ignorar exit code 1)
+      - name: Run Semgrep scan (JSON)
+        run: semgrep scan --config="p/default" . --json --output semgrep.json --exit-zero
+
+      # 4️⃣ Generar reporte HTML
+      - name: Generate HTML report
+        run: prospector-html --input semgrep.json --output semgrep-report --filter semgrep
+
+      # 5️⃣ Publicar HTML en GitHub Pages
+      - name: Publish HTML report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          dotnet-version: '8.x'
-      - name: Restore Dependencies
-        run: dotnet restore
-      - name: Run Tests
-        run: dotnet test --collect:"XPlat Code Coverage"
-      - name: Run SonarCloud Analysis
-        uses: sonarsource/sonarcloud-github-action@master
-        with:
-          args: >
-            -Dsonar.organization=YOUR_ORG
-            -Dsonar.projectKey=YOUR_PROJECT
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-      - name: Pack NuGet
-        run: dotnet pack Bank.Domain/Bank.Domain.csproj -c Release -o ./nuget
-      - name: Publish NuGet Package
-        uses: nuget/setup-nuget@v1
-      - name: Push Package to GitHub
-        run: dotnet nuget push ./nuget/*.nupkg -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/YOUR_USERNAME/index.json
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./semgrep-report
