--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,5 +1,4 @@
-name: Semgrep HTML Report
-
+name: Semgrep Analysis
 on:
   push:
     branches: [main]
@@ -7,28 +6,23 @@ on:
 jobs:
   semgrep_html:
     runs-on: ubuntu-latest
-
     steps:
-      # 1️⃣ Clonar el repositorio
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      # 2️⃣ Instalar Semgrep y prospector-html en el runner
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install semgrep prospector2html
 
-      # 3️⃣ Ejecutar Semgrep y generar JSON (ignorar exit code)
-    - name: Run Semgrep scan (JSON)
-      run: semgrep scan --config="p/default" . --json --output semgrep.json || true
+      - name: Run Semgrep scan (JSON)
+        run: semgrep scan --config="p/default" . --json --output semgrep.json --exit-zero
 
-      # 4️⃣ Generar reporte HTML (ignorar exit code 1 para no fallar el workflow)
       - name: Generate HTML report
-        run: prospector-html --input semgrep.json --output semgrep-report --filter semgrep || true
+        run: prospector-html --input semgrep.json --output semgrep-report --filter semgrep
 
-      # 5️⃣ Publicar HTML en GitHub Pages
       - name: Publish HTML report to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+        uses: peaceiris/actions-gh-pages@v6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./semgrep-report
