--- a/.github/workflows/release_version.yml
+++ b/.github/workflows/release_version.yml
@@ -16,7 +16,7 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build Project
-        run: dotnet build -c Release Bank/Bank.sln
+        run: dotnet build -c Release Bank/Bank.Domain/Bank.Domain.csproj
 
       - name: Pack NuGet Package
         run: dotnet pack Bank/Bank.Domain/Bank.Domain.csproj -c Release -o ./nuget
